--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="custom.css">
 <!--Let browser know website is optimized for mobile-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta name="apple-mobile-web-app-capable" content="yes">
 </head>
   <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
     <div id="app"></div>
