--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/cyborg/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 <!-- <link rel='stylesheet' href="grayscale.css"> -->
 <link rel="stylesheet" href="custom.css">
 <!--Let browser know website is optimized for mobile-->
